--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -1,86 +1,79 @@
-﻿body {
+﻿/* GLOBAL LAYOUT */
+body {
     background-color: #001524;
     height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     font-family: Arial, sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
+/* TITLE BLOCK */
 #titleBlock {
-    position: relative;
-    bottom: 500px;
-    width: 500px;
-    height: 180px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin: 2rem 0rem;
 }
 
 h1 {
     color: #C8963E;
-    font-size: 50px;
-    position: fixed;
+    font-size: 3rem;
+    margin: 0;
 }
 
+/* WINNER TEXT */
 #winner {
-    position: relative;
-    top: 75px;
+    margin-top: 1rem;
     color: #C8963E;
-    font-size: 40px;
+    font-size: 2rem;
 }
 
+/* RESET BUTTON */
 #reset {
-    position: relative;
-    top: 400px;
+    margin-top: 2rem;
     color: #C8963E;
-    padding: 20px 60px;
+    padding: 1rem 3rem;
     background: none;
     cursor: pointer;
-    border-style: solid;
-    border-color: #C8963E;
+    border: 3px solid #C8963E;
     border-radius: 10px;
-    box-shadow: none;
-    font-size: 30px;
+    font-size: 1.5rem;
+    transition: background-color .3s;
 }
 
 #reset:active {
     background-color: #D7B170;
 }
 
+/* GRID */
 #grid {
     display: grid;
-    grid-template-areas: "a a a"
-        "a a a"
-        "a a a";
-    grid-gap: 50px;
-    padding: 50px;
-    border-style: solid;
-    border-width: 7px;
-    border-radius: 25px;
-    color: #15616D;
-    position: fixed;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    padding: 2rem;
+    border: 5px solid #15616D;
+    border-radius: 20px;
+    margin-top: 2rem;
 }
 
+/* GAME SQUARES */
 .buttonSquare {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    border-radius: 25px;
-    border-color: #15616D;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 20px;
+    border: 5px solid #15616D;
     background-color: #001524;
-    border-style: solid;
-    border-width: 7px;
     color: #15616D;
-
-    transition: transform .5s,, font-size .5s;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: transform .3s;
     position: relative;
     z-index: 5;
 }
@@ -89,20 +82,16 @@ button:hover {
     transform: scale(1.1);
 }
 
+/* O MARK */
 .O {
     position: absolute;
     z-index: 0;
 }
 
-.X {
-    position: absolute;
-    z-index: 0;
-}
-
 .O-outer {
-    width: 150px;
-    height: 150px;
-    border-radius: 75px;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
     background-color: #CFFFB3;
     display: flex;
     align-items: center;
@@ -110,23 +99,62 @@ button:hover {
 }
 
 .O-inner {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
     background-color: #001524;
 }
 
-.X-left {
-    width: 15px;
-    height: 160px;
-    transform: rotate(45deg);
+/* X MARK */
+.X {
+    position: absolute;
+    z-index: 0;
+}
+
+.X-left,
+.X-right {
+    width: 0.6rem;
+    height: 5rem;
     background-color: #A63D40;
+    position: absolute;
+}
+
+.X-left {
+    transform: rotate(45deg);
 }
 
 .X-right {
-    width: 15px;
-    height: 160px;
-    transform: rotate(270deg);
-    background-color: #A63D40;
+    transform: rotate(-45deg);
 }
 
+/* RESPONSIVE TWEAKS */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    #grid {
+        gap: 1.2rem;
+        padding: 1.2rem;
+    }
+
+    .buttonSquare {
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .O-outer {
+        width: 4rem;
+        height: 4rem;
+    }
+
+    .O-inner {
+        width: 3rem;
+        height: 3rem;
+    }
+
+    .X-left,
+    .X-right {
+        height: 4rem;
+    }
+}
